# DiceGame

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  die.cpp  die.h  game_constants.h  gameboard.cpp  gameboard.h  gamecolor.h  gamestate.cpp  gamestate.h  netmessage.cpp  netmessage.h  player.cpp  player.h  servergamestate.cpp  servergamestate.h  utility.cpp  utility.h
src/client/: CMakeLists.txt  animateddie.cpp  animateddie.h  box.cpp  box.h  button.cpp  button.h  client.cpp  dicemanager.cpp  dicemanager.h  game.cpp  game.h  gameui.cpp  gameui.h  gbboard.cpp  gbboard.h  gbbox.cpp  gbbox.h  netclient.cpp  netclient.h  run_game.cpp  situation_tests.cpp  test_run.cpp
src/server/: CMakeLists.txt  client_test.cpp  netserver.cpp  netserver.h  packet_helper.h  server.cpp  server_test.cpp
tests/: CMakeLists.txt  gameboard_tests.cpp  gameserver_tests.cpp  gamestate_tests.cpp  message_tests.cpp  server_tests.cpp
